# libdistmesh

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/scripts/: plot_mesh.py
examples/src/: polygons_x_symmetric.cpp
include/distmesh/: distmesh.h  functional.h
src/: CMakeLists.txt  triangulation.cpp  utils.cpp
